added athorphic AI and added second csv logic

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,7 @@ IMAP_PORT=993
 # SMTP Configuration (for sending emails)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
+
+# AI Configuration (for referral form processing)
+ANTHROPIC_API_KEY=your-anthropic-api-key-here
+MAX_AI_ATTACHMENT_SIZE_MB=2
