added auto appoiment system

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,14 @@ SMTP_PORT=465
 # AI Configuration (for referral form processing)
 ANTHROPIC_API_KEY=your-anthropic-api-key-here
 MAX_AI_ATTACHMENT_SIZE_MB=2
+
+# Google Calendar OAuth2 Configuration (for appointment booking)
+# Create OAuth2 credentials at: https://console.cloud.google.com/apis/credentials
+# Run `node scripts/generateToken.js` to get the refresh token
+GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-client-secret
+GOOGLE_REFRESH_TOKEN=your-refresh-token
+GOOGLE_CALENDAR_ID=primary
+
+# Doctor Configuration
+DOCTOR_NAME=Dr Rishabh
