--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "csv-writer": "^1.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "googleapis": "^171.4.0",
     "http-errors": "^2.0.1",
     "imapflow": "^1.2.9",
     "mailparser": "^3.9.3",
